corrections qq erreurs