@@ -20,7 +20,7 @@ public class CategorieDeProduitsDAO extends CategorieDeProduits {
         ArrayList<String> attributs = new ArrayList<>();
         attributs.add("identifiantCategorieDeProduits");
         List<HashMap<String, String>> infos = requeteAvecAffichage(requete, attributs);
-        int id = Integer.parseInt(infos.getFirst().get("identifiantCategorieDeProduits")) + 1;
+        int id = Integer.parseInt(infos.get(0).get("identifiantCategorieDeProduits")) + 1;
 
         // Mise à jour de l'identifiant dans l'objet Java
         categorieDeProduits.setIdentifiantCategorie(id);
